               for all API endpoints.
  - [bugfix]   Fix various bugs in the backend that were discovered while
               writing tests.
  - [build]    Make the build system more modular.
  - [build]    Write separate interactive and CLI versions of the apache2-debian
               target. (apache2-debian-interactive and apache2-debian)

v1.0.2
  - [bugfix]   Apply a workaround for docker-library/php#865 which broke
               LibreSignage Docker image builds.

v1.0.1
  - [bugfix]   Fix a bug where using forward slashes in slide markup caused
               exceptions. (issue #66)
  - [bugfix]   Fix a bug where passing a NULL exception to error_handle() caused
               a fatal exception in some cases. (issue #61)
  - [feature]  Tag new Docker releases with the 'latest' tag.
  - [bugfix]   Fix standalone checks in the API interface module.
  - [bugfix]   Fix incompatible pandoc version in Travis CI. (issue #58)
  - [feature]  Implement the INITCHK_WARN make option for ignoring errors
               from initialization checks.
  - [bugfix]   Fix a bug where User::load() didn't properly check usernames.

v1.0.0
  - [internal] Modularize and improve the build system.
  - [feature]  Implement an improved configuration file loader that
               supports loading configuration from multiple files.
  - [feature]  Implement functionality for building LibreSignage
               Docker images.
  - [bugfix]   Fix a bug that prevented removing slide assets that didn't
               have a thumbnail.
  - [internal] Improve display animation performance by optimizing
               CSS and JavaScript. Browsers are now also hinted to use
               GPU acceleration for rendering the display.
  - [bugfix]   Fix dialogs not appearing correctly on the documentation
               pages.
  - [bugfix]   Fix a bug where adding media to user-created slides didn't
               work. (#27)
  - [feature]  Implement a new tag [font] in the markup transpiler for