@@ -16,6 +16,8 @@ v1.1.0
   - [build]    Make the build system more modular.
   - [build]    Write separate interactive and CLI versions of the apache2-debian
                target. (apache2-debian-interactive and apache2-debian)
+  - [build]    Various improvements to the build system.
+  - [docs]     Generate documentation with Doxygen.
 
 v1.0.2
   - [bugfix]   Apply a workaround for docker-library/php#865 which broke
